--- a/config.ini
+++ b/config.ini
@@ -4,12 +4,12 @@
 [DEFAULT]
 # RUNTIME
 run_mode                 = parallel # serial, parallel, dumb
-procs                    = 12
+procs                    = 7
 population_save_interval = 10
 
 # EVOLUTION
 generations     = 10000
-population_size = 500
+population_size = 100
 batch_size      = 2
 
 # ENVIROMENT
@@ -34,18 +34,19 @@ mutate_output_activations = True
 # SPECIES
 elites_per_species           = 1
 min_species                  = 3
-target_species               = 50
-max_stagnation               = 30
+target_species               = 20
+target_species_tolerance     = 4
+species_stabilization        = 5
+speciation_max_tries         = 100
+max_stagnation               = 50
 keep_best_species            = 1
 keep_best_genomes_in_species = 0.25
 allow_interspecies_mating    = False
 interspecies_mating_count    = 2
 
 #  DISTANCE
-distance_threshold          = 6
-init_species_stabilization  = 10
-init_species_max_tries      = 60
-distance_adj_factor         = 0.5
+distance_threshold          = 3
+distance_adj_factor         = 0.0625
 weight_diff_coefficient     = 5 # 1
 bias_diff_coefficient       = 4 # 1
 activation_diff_coefficient = 3 # 2
@@ -58,7 +59,7 @@ connection_add_chance               = 0.66
 connection_toggle_chance            = 0.0033
 weight_mutate_chance                = 0.75
 max_abs_weight_mutate_factor        = 2
-weight_init_range                   = -1000, 1000
+weight_init_range                   = -1.0, 1.0
 weight_perturb_vs_set_chance        = 0.75
 matching_disabled_connection_chance = 0.75
 max_to_attempts_factor              = 6
@@ -68,6 +69,6 @@ neuron_add_chance          = 0.066
 neuron_toggle_chance       = 0.0066
 bias_mutate_chance         = 0.75
 max_abs_bias_mutate_factor = 2
-bias_init_range            = -1000, 1000
+bias_init_range            = -1.0, 1.0
 bias_perturb_vs_set_chance = 0.75
 activation_mutate_chance   = 0.75
