--- a/config.ini
+++ b/config.ini
@@ -36,7 +36,7 @@ elites_per_species           = 1
 min_species                  = 3
 target_species               = 20
 target_species_tolerance     = 4
-species_stabilization        = 5
+speciation_stabilization        = 5
 speciation_max_tries         = 100
 max_stagnation               = 50
 keep_best_species            = 1
