--- a/config.ini
+++ b/config.ini
@@ -21,7 +21,7 @@ render_mode       = human # human, rgb_array
 
 # NEURAL NETWORK
 input_neurons             = 24
-hidden_neurons            = 1
+initial_hidden_neurons            = 1
 output_neurons            = 4
 min_connections_quota     = 1
 refractory_factor         = 0.5
